Fixing alignment

--- a/odin-landing-page/style.css
+++ b/odin-landing-page/style.css
@@ -1,54 +1,73 @@
-.header, 
-.footer,
-.hero {
-    background-color: #1a2246;
-    display: flex;
-    padding: 0 300px;
-    margin: 0;
-}
-
 .header {
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 16px;
-    margin: 0;
-}
-
-.header-logo {
-    color: #F9FAF8;
+    background-color: #E5E7EB;
+    color: #1a2246;
     font-size: 18px;
     font-family: roboto, sans-serif;
-    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 16px;
+    padding: 16px 0;
 }
 
-.header-links {
+.header-left,
+.header-right {
+    width: 400px;
+}
+
+.header-right {
+    display: flex;
+    justify-content: flex-end;
     list-style-type: none;
     padding: 0;
     margin: 0;
-    gap: 20px;
-    display: flex;
+    gap: 36px;
+}
+
+.header-right a {
+    background-color: #E5E7EB;
+    color: #1a2246;
     font-family: roboto, sans-serif;
-    color: #E5E7EB;
-    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
 }
 
 .hero {
-    justify-content: space-between;
+    background-color: #1a2246;
+    padding: 120px 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
     align-items: center;
-    gap: 28px;
-    padding-bottom: 72px;
-    height: 500px;
     box-sizing: border-box;
 }
 
-.hero-left {
+.hero-image {
+    width: 400px;
+    height: 300px;
+    flex-shrink: 0;
+}
+
+.hero-image img {  
+    width: 400px;
+    height: 300px;
+    font-family: roboto, sans-serif;
+    font-size: 12px;
+    font-weight: normal;
+    color: #E5E7EB;
+}
+
+.hero-text {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 250px;
+    width: 400px;
+    flex-shrink: 0;
 }
 
-.hero-left h2 {
+.hero-text h2 {
     color: #F9FAF8;
     font-size: 72px;
     font-weight: 800;
@@ -56,42 +75,53 @@
     font-family: roboto, sans-serif;
 }
 
-.hero-left p {
+.hero-text p {
     color: #E5E7EB;
     font-size: 18px;
     font-family: roboto, sans-serif;
 }
 
-.hero-right img {
-    width: auto;
-    height: 250px;
-    flex-shrink: 0;
+.hero-text a {
+    background-color: #E5E7EB;
+    color: #1a2246;
+    padding: 4px 0;
+    font-family: roboto, sans-serif;
+    box-sizing: border-box;
+    text-align: center; 
+    text-decoration: none;
 }
 
 .body {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding: 80px 400px;
+    justify-content: center;
+    padding: 100px 0 100px 0;
+    box-sizing: border-box;
 }
 
-.body p {
-    font-size: 36px;
+.body div {
     color: #1f2937;
+    font-family: roboto, sans-serif;
+    font-size: 48px;
     font-weight: 800;
+    margin-bottom: 16px;
 }
 
 .container {
     display: flex;
-    padding-top: 32px;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 800px;
 }
 
 .container img {
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
-    margin: 0 20px;
+    width: 160px;
+    height: 160px;
+    margin: 16px;
+    font-family: roboto, sans-serif;
+    font-size: 12px;
+    font-weight: normal;
 }
 
 .quote {
@@ -147,17 +177,6 @@ p {
     font-family: roboto, sans-serif;
 }
 
-a {
-    background-color: #E5E7EB;
-    color: #1a2246;
-    padding: 4px 8px;
-    font-family: roboto, sans-serif;
-    width: 150px;
-    height: auto;
-    box-sizing: border-box;
-    text-align: center; 
-    text-decoration: none;
-}
 
 .action-section p {
     font-family: roboto, sans-serif;
